// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM Hook #claimTokens gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 35815,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 528550,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 638590,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when both order pools are selling gas with no initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 430301,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing 1 initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 341377,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing 2 initialized ticks 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 363643,
}
`;

exports[`TWAMM Hook #executeTWAMMOrders when only one pool is selling gas crossing no initialized tick 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 316818,
}
`;

exports[`TWAMM Hook #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 139941,
}
`;

exports[`TWAMM Hook #updateLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 230045,
}
`;

exports[`TWAMM Hook bytecode size 1`] = `26051`;
